--- a/task_1.html
+++ b/task_1.html
@@ -10,9 +10,9 @@
 
 <body>
     <script>
-        'use strict!';
+        'use strict'
         let Tc = +prompt('Введите температуру в градусах по целию:')
-        let Tf = (9 / 5) * Tc + 32;
+        let Tf = (9 / 5) * Tc + 32
         alert(`${Tc} градусов по цельсию = ${Tf} градусов по фаренгейту`)
     </script>
 </body>
