--- a/task_2.html
+++ b/task_2.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        'use strict!';
+        'use strict'
         let admin
         let name = 'Василий'
         admin = name
