--- a/task_3.html
+++ b/task_3.html
@@ -10,12 +10,12 @@
 
 <body>
     <script>
-        'use strict!';
-        console.log(10 + 10 + "10");
-        console.log(10 + "10" + 10);
-        console.log(10 + 10 + +"10");
-        console.log(10 / -"");
-        console.log(10 / +"2,5");
+        'use strict'
+        console.log(10 + 10 + "10")
+        console.log(10 + "10" + 10)
+        console.log(10 + 10 + +"10")
+        console.log(10 / -"")
+        console.log(10 / +"2,5")
         /*
         1. 10 складываем с 10, затем 20 складываем с строкой '10', происходит неявное преобразование числа
         20 в строку, после чего конкатенация, результать строка '2010'
